# soup-object

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  extension.cpp  extension.h
configs/addons/soup/configs/: app.json  app.json.example
public/: ISoupObject.h  ISoupObjectPlugin.h
src/: SoupObject.cpp  SoupObject.h
